@@ -1,4 +1,7 @@
 
+2009-04-20 10:24 Ali aliov@xfce.org 
+	 * : Provide the possibility to disable CPU freq control+don't compile the cpu governor code if we aren't on Linux
+
 2009-04-20  9:22 Ali aliov@xfce.org 
 	 * : Remove all encoding keys from the desktop file thanks to Yves for pointing out
 
